# Uglifess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Qt/: CMakeLists.txt
Qt/res/: mainwidget.ui  resources.qrc
Qt/src/: MainWidget.cpp  MainWidget.h  ProtocolV001SerialPortParser.cpp  ProtocolV001SerialPortParser.h  RealSerialPortParser.cpp  RealSerialPortParser.h  SerialPortParser.cpp  SerialPortParser.h  SerialPortThread.cpp  SerialPortThread.h  SimulatorSerialPortParser.cpp  SimulatorSerialPortParser.h  main.cpp
STM32/: Uglifess.ino
STM32/Uglifess/: Uglifess.ino
